--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,10 @@
 platform = espressif8266
 board = esp12e
 framework = arduino
+
+[env:esp-wrover-kit]
+platform = espressif32
+board = esp-wrover-kit
+framework = arduino
+
 monitor_speed = 115200
