Update gitignore for .vscode

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif8266
 board = esp12e
 framework = arduino
+lib_deps = adafruit/RTClib @ ^2.1.4, contrem/arduino-timer @ ^3.0.1,ulikoehler/QuickI2C @ ^2.1.2,adafruit/Adafruit GFX Library @ ^1.11.11
 
 [env:esp-wrover-kit]
 platform = espressif32
