--- a/platformio.ini
+++ b/platformio.ini
@@ -12,11 +12,24 @@
 platform = espressif8266
 board = esp12e
 framework = arduino
-lib_deps = adafruit/RTClib @ ^2.1.4, contrem/arduino-timer @ ^3.0.1,ulikoehler/QuickI2C @ ^2.1.2,adafruit/Adafruit GFX Library @ ^1.11.11
+monitor_speed = 9600
+lib_deps = 
+	adafruit/RTClib@^2.1.4
+	contrem/arduino-timer@^3.0.1
+	adafruit/Adafruit GFX Library@^1.11.11
+	adafruit/Adafruit SSD1306@^2.5.13
+	lennarthennigs/Button2@^2.3.3
+	lennarthennigs/ESP Rotary@^2.1.1
 
 [env:esp-wrover-kit]
 platform = espressif32
 board = esp-wrover-kit
 framework = arduino
-
 monitor_speed = 9600
+lib_deps = 
+	adafruit/RTClib@^2.1.4
+	contrem/arduino-timer@^3.0.1
+	adafruit/Adafruit GFX Library@^1.11.11
+	adafruit/Adafruit SSD1306@^2.5.13
+	lennarthennigs/Button2@^2.3.3
+	lennarthennigs/ESP Rotary@^2.1.1
